[gd_scene load_steps=12 format=3 uid="uid://cf1rrdtska012"]

[ext_resource type="FontFile" uid="uid://bgv586r20ps8e" path="res://Fonts/Xolonium-Regular.ttf" id="1_cv3wm"]
[ext_resource type="Texture2D" uid="uid://dqaq0cd86tc4c" path="res://Assets/Untitled-1.png" id="1_omd1l"]
[ext_resource type="Script" uid="uid://b5j6cyc02j6nt" path="res://level_2_menu.gd" id="1_xqm6k"]
[ext_resource type="FontFile" uid="uid://c7r7dvbryxaw0" path="res://Fonts/boldpixels/BoldPixels.otf" id="3_wialk"]
[ext_resource type="AudioStream" uid="uid://d2jur0ngr3fsb" path="res://Assets/ButtonClickSound.mp3" id="5_h2f8n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_omd1l"]
bg_color = Color(0.44716257, 0.7790963, 0.74220705, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.20784314, 0.11372549, 0.02745098, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0.05490196, 0.5647059, 0.68235296, 1)
shadow_size = 1
shadow_offset = Vector2(2.615, 2.62)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wialk"]
bg_color = Color(0.30904874, 0.61033934, 0.5765232, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.20784314, 0.11372549, 0.02745098, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0.05490196, 0.5647059, 0.68235296, 1)
shadow_size = 1
shadow_offset = Vector2(2.615, 2.62)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xqm6k"]
bg_color = Color(0.15982497, 0.35748798, 0.3358178, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.20784314, 0.11372549, 0.02745098, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0.05490196, 0.5647059, 0.68235296, 1)
shadow_size = 1
shadow_offset = Vector2(2.615, 2.62)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wialk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h2f8n"]
bg_color = Color(0.15982497, 0.35748798, 0.3358178, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.20784314, 0.11372549, 0.02745098, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0.05490196, 0.5647059, 0.68235296, 1)
shadow_size = 1
shadow_offset = Vector2(2.615, 2.62)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xqm6k"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 26.0
offset_right = 4.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xqm6k")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -244.0
offset_top = -386.0
offset_right = 236.0
offset_bottom = 334.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_omd1l")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -138.0
offset_top = -71.0
offset_right = 138.0
offset_bottom = 71.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 9

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_cv3wm")
theme_override_font_sizes/font_size = 51
theme_override_styles/normal = SubResource("StyleBoxFlat_omd1l")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wialk")
theme_override_styles/hover = SubResource("StyleBoxFlat_xqm6k")
theme_override_styles/focus = SubResource("StyleBoxEmpty_wialk")
text = "Start"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_cv3wm")
theme_override_font_sizes/font_size = 51
theme_override_styles/normal = SubResource("StyleBoxFlat_omd1l")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wialk")
theme_override_styles/hover = SubResource("StyleBoxFlat_h2f8n")
theme_override_styles/focus = SubResource("StyleBoxEmpty_xqm6k")
text = "Options"

[node name="BackToLevel1Button" type="Button" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 643.0
offset_right = 140.0
offset_bottom = 682.0
theme_override_fonts/font = ExtResource("1_cv3wm")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_omd1l")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wialk")
theme_override_styles/hover = SubResource("StyleBoxFlat_h2f8n")
theme_override_styles/focus = SubResource("StyleBoxEmpty_xqm6k")
text = "Tutorial
"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -222.0
offset_top = -405.0
offset_right = 216.0
offset_bottom = -248.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("3_wialk")
theme_override_font_sizes/normal_font_size = 62
bbcode_enabled = true
text = "[wave] Dodge Mahjong [/wave]
 [wave ]Sir 
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SfxButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_h2f8n")

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="BackToLevel1Button" to="." method="_on_back_to_level_1_button_pressed"]
